--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,5 +1,5 @@
 <div th:fragment="head">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="webjars/bootstrap/4.1.3/css/bootstrap.min.css">
 
     <script src="webjars/jquery/3.2.1/jquery.min.js"></script>
