--- a/src/main/resources/templates/views/registerForm.html
+++ b/src/main/resources/templates/views/registerForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragments/head::head">
-    <title>Register Form</title>
+    <title>Register</title>
 </head>
 <body>
 
@@ -9,18 +9,36 @@
 
 <main class="container mySpace">
     <div class="jumbotron">
-        <form th:action="@{/register}" th:object="${user}">
+        <div class="alert alert-warning" th:if="${userExist}">
+            <p class="text text-center">
+                Email is already exist
+            </p>
+        </div>
+        <div class="alert alert-info" th:if="${userCreated}">
+            <p class="text text-center">
+                User was created successful
+            </p>
+        </div>
+        <form th:action="@{/register}" th:object="${user}" th:method="post">
+            <div class="form-group">
+                <select name="role" id="" class="custom-select">
+                    <option th:each="role:${user.roles}" th:text="${role.name}"></option>
+                </select>
+            </div>
             <div class="form-group">
                 <label for="name" class="form-control-label">Name</label>
                 <input type="text" th:field="*{name}" id="name" class="form-control">
+                <div class="text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
             </div>
             <div class="form-group">
                 <label for="email" class="form-control-label">Email</label>
                 <input type="text" th:field="*{email}" id="email" class="form-control">
+                <div class="text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
             </div>
             <div class="form-group">
                 <label for="password" class="form-control-label">Password</label>
-                <input type="text" th:field="*{password}" id="password" class="form-control">
+                <input type="password" th:field="*{password}" id="password" class="form-control">
+                <div class="text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Register" class="btn btn-primary">
